@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+by sun: Fixed various styling issues for admin_menu and admin_menu_toolbar.
 by sun: Updated for Schema API, DBTNG, coding standards.
 by sun: Updated for new admin/modules path.
 #701424 by hutch: Updated for new admin/people/people path.
